--- a/public/html/index.html
+++ b/public/html/index.html
@@ -10,12 +10,25 @@
 </head>
 <body>
     <div ng-controller="TodoController">
-        {{ message }}
-        <input type="text" ng-model="greeting">
-        {{ greeting }}
-        <button ng-click="print(greeting)">Butt on</button>
+        <input type="text" ng-model="newTodo.description">
+        <button ng-click="addTodo(newTodo)">Add Todo</button>
+        <hr>
+        <ul>
+            <li ng-repeat="todo in todos">
+                <div ng-hide="todo.edit">
+                    {{todo.description}}
+                    <button ng-click="edit(todo)">E</button>
+                    <button ng-click="deleteTodo(todo)">&times;</button>
+                </div>
+                <div>
+                    <input type="text" ng-model="todo.description">
+                    <button ng-click="update(todo)">Update</button>
+                </div>
+            </li>
+        </ul>
     </div>
 </body>
     <script src="js/app.js"></script> 
     <script src="js/controllers/todo.controller.js"></script>
+    <script src="js/services/todo.service.js"></script>
 </html>
